# Image3

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
output/ukiyo_cats/: README.md  catalog.json  cover.html
output/ukiyo_cats/cards/: 01_浮世绘猫.html  02_慵懒午后.html  03_月下暗影.html  04_一叶知秋.html  05_紫藤嬉戏.html  06_月下独酌.html  文案.txt
output/zodiac_ink/: 文案.txt
prompts/creative/: cat_astronaut.txt  fruit_animal.txt  pixel_world.txt
prompts/ukiyo_cats/: ukiyo_01_慵懒午后.md  ukiyo_02_月下暗影.md  ukiyo_03_一叶知秋.md  ukiyo_04_紫藤嬉戏.md  ukiyo_05_浮世绘猫.md  ukiyo_06_月下独酌.md
prompts/wallpapers/: abstract.txt  cyberpunk.txt  nature.txt
prompts/xiaohongshu/: color_study.txt  content_plan.md  flat_lay.txt  mood_board.txt
prompts/zodiac_ink/: zodiac_01_鼠.md  zodiac_02_牛.md  zodiac_03_虎.md  zodiac_04_兔.md  zodiac_05_龙.md  zodiac_06_蛇.md  zodiac_07_马.md  zodiac_08_羊.md  zodiac_09_猴.md  zodiac_10_鸡.md  zodiac_11_狗.md  zodiac_12_猪.md
scripts/: batch_wallpaper.py  batch_xhs.py  batch_zodiac.sh  generate.py  html2png.py  watermark.py  watermark_zodiac.py
src/image3/: __init__.py  api_client.py  cli.py  client.py  prompts.py
tests/: test_api_client.py  test_client.py  test_prompts.py
