[project]
name = "image3"
version = "0.1.0"
description = "AI Image Generation Workbench — fun images, wallpapers, Xiaohongshu content"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
image3 = "image3.cli:main"
